# kaleido3d

./: .appveyor.yml  .gitignore  CMakeLists.txt  README.md  kaleido3d.ib  make.cmd
Data/Test/: Test.blob  Test.h
Include/: Kaleido3D.h
Include/Config/: Compiler.h  Config.h  CppStl.h  OSHeaders.h
Include/Interface/: IModule.h  NGFX.h  ShaderCommon.h
Include/KTL/: Allocator.hpp  DynArray.hpp  Hash.hpp  HashMap.hpp  RefCount.hpp  String.hpp  Tuple.hpp  TypeTrait.hpp
Include/Math/: kMath.hpp
Project/: Common.cmake  FindMaya.cmake  FindThirdParty.cmake  Platform.cmake  build.gradle  iOSBuildWindows.cmake
Source/Core/: AllocatorImpl.cpp  App.cpp  App.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt  CoreMinimal.h  InputDevice.cpp  LogUtil.cpp  LogUtil.h  Module.cpp  Os.cpp  Os.h  StringImpl.cpp  Timer.h  WebSocket.cpp  WebSocket.h  Window.h
Source/Core/Base/: AssetManager.cpp  AssetManager.h  IO.h  Log.h  Looper.h  Module.cpp  Platform.h  Regex.cpp  Simd.cpp  Simd.h
Source/Core/Base/Memory/: AllocatorImpl.cpp
Source/Core/Dispatch/: WorkQueue.h
Source/Core/KTL/: Allocator.h  Atomic.h  DynArray.h  RefCount.h  SharedPtr.h  Singleton.hpp  String.h  Tuple.h
Source/Core/Math/: Noise.cpp
Source/Core/Net/: Net.cpp  Net.h
Source/Core/Runtime/: Class.h  Enum.h  Field.h  Method.h  Object.h  Runtime.cpp  Runtime.h
Source/Core/UnitTest/: CMakeLists.txt  Common.h  GTestCore.cpp  UTCore.Os.cpp  UTCore.RuntimeClass.cpp  UTCore.String.cpp  UTKTL.DynArray.cpp  UTKTL.Functional.cpp  UTKTL.HashMap.cpp  UTKTL.SharedPtr.cpp
Source/Core/Utils/: StringUtils.cpp  StringUtils.h
Source/Core/XPlatform/: Os.cpp  Os.h  Timer.cpp  Timer.h
Source/Engine/: CMakeLists.txt
Source/Engine/Assets/: Bundle.cpp  Bundle.h  CameraData.h  MeshData.h
Source/Log/Private/: LogImpl.cpp
Source/NGFX/: CMakeLists.txt  build.ib
Source/NGFX/Private/ShaderLab/: shaderlab.cpp  sl_parse_state.cpp  sl_parser.cpp  sl_parser.h
Source/NGFX/Private/Vulkan/: vulkan.cpp
Source/NGFX/Public/: ngfx.h  ngfx_atomic.h  ngfx_container.h  ngfx_shader.h  ngfx_shader_compiler.h
Source/NGFX/examples/: CMakeLists.txt
Source/NGFX/examples/MNIST/: CMakeLists.txt
Source/NGFX/examples/MiniEngine/: CMakeLists.txt
Source/NGFX/examples/MiniEngine/Engine/: MiniEngine.cpp  MiniEngine.h
Source/NGFX/examples/MiniEngine/Engine/Component/: Primitive.cpp  Primitive.h
Source/NGFX/examples/MiniEngine/Engine/Material/: Material.cpp  Material.h
Source/NGFX/examples/MiniEngine/Renderer/: RenderPass.cpp  RenderPass.h  RenderProxy.cpp  RenderProxy.h  Renderer.cpp  Renderer.h  VertexFactory.cpp  VertexFactory.h
Source/NGFX/examples/ProcedureAsteroids/: CMakeLists.txt  main.cpp
Source/NGFX/examples/SimpleCL/: CMakeLists.txt  main.cpp
Source/NGFX/gtest/: CMakeLists.txt  TestNGFX.cpp  TestVk.cpp
Source/NGFX/src/: CMakeLists.txt  d3d12.cpp  metal.cpp  ngfx.h  ngfxu.cpp  ngfxu.h  vk_shader_archive.cpp  vulkan.cpp  vulkan_glslang.cpp  vulkan_glslang.h
Source/NGFX/tools/: vulkanc.cpp
Source/Platform/Android/cpp/: AndroidApp.cpp
Source/Platform/Apple/: CpuUsage.mm
Source/Platform/Apple/MacOS/: App.mm  Window.mm
Source/Platform/Microsoft/Win32/: InputDeviceImpl.h  Window.cpp
Source/RHI/UnitTest/: 2.SwapChainPresent.cpp  3.TriangleWithDepthStencilAttachment.cpp  4.TexturedCube.cpp  5.ComputeParticles.cpp  6.MultiThreadRendering.cpp  CMakeLists.txt
Source/RHI/UnitTest/Base/: UTRHIAppBase.h
Source/RHI/Vulkan/: CMakeLists.txt  VkCommon.h
Source/RHI/Vulkan/Private/: DynVulkanLoader.h  VkRHI.cpp  VkRHI.h
Source/Renderer/: CMakeLists.txt  Render.h
Source/Renderer/Public/: Renderer.h  RendererMinimal.h
Source/Script/: V8Binding.cpp
Source/ShaderCompiler/: CMakeLists.txt
Source/ShaderCompiler/UnitTest/: UTTools.ShaderCompiler.cpp
Tools/: Build.py  GetThirdParty.py
Tools/CI/: AndroidNDK.py  CMake.py  Common.py  Download.py  __init__.py
Tools/CI/AppVeyor/: InstallAndroid.bat
Tools/CppReflector/: Reflector.cpp  Reflector.h
Tools/Editor/: CMakeLists.txt
Tools/Mobile/DeviceBridge/: CMakeLists.txt
Tools/Mobile/DeviceBridge/Private/: DeviceBridge.cpp
Tools/Mobile/DeviceBridge/Private/Android/: AdbHelper.cpp  AdbHelper.h  Bridge.cpp  Bridge.h  DeviceMonitor.cpp  DeviceMonitor.h
Tools/Mobile/DeviceBridge/Private/iOS/: Bridge.cpp  Bridge.h
Tools/Mobile/DeviceBridge/Public/: MobileDeviceBridge.h
Tools/Mobile/PerfMonitor/: CMakeLists.txt
Tools/Mobile/PerfMonitor/Views/: DeviceView.cpp  LogView.cpp  LogView.h
Tools/RHIGenerator/: gl_gen.py  ngfx.yml
Tools/RHIGenerator/generator/: gen.py  js_gen.py  name.py  opengl_generator.py
Tools/RHIGenerator/glad/: generate.py  opener.py  parse.py  spec.py  util.py
